--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.26.0",
     "dayjs": "^1.10.7",
     "framer-motion": "^6",
     "next": "12.0.10",
